# agentic-sheet-music

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: audio-engineer.md  eval-curator.md  failure-diagnoser.md  ground-truth-builder.md  harmony-analyst.md  music-theory-reviewer.md  omr-experimenter.md  omr-specialist.md  slide-designer.md
.claude/hooks/: format-python.sh
.claude/rules/: correctness.md  harmony.md  loop-guardrails.md  omr.md
.claude/skills/analyze-score/: SKILL.md
.claude/skills/explain-harmony/: SKILL.md
.claude/skills/improve-omr/: SKILL.md
.claude/skills/new-feature/: SKILL.md
eval-runs/: MEMORY.md  iter_004.md  iter_005.md  iter_007.md
scripts/: start-loop.sh  stop-loop.sh
specs/: ARCHITECTURE.md  PRD.md  feature-annotated-pdf.md  feature-audio.md  feature-harmony-cadence.md  feature-harmony-chord-extraction.md  feature-harmony-key-detection.md  feature-harmony-roman.md  feature-omr-ingest.md  feature-omr-pdf.md  feature-playalong.md  feature-vlm-autocorrect.md  feature-vlm-verify.md
src/agentic_sheet_music/: __init__.py  cli.py  types.py
src/agentic_sheet_music/eval/: cli.py  (+7 more)
tests/: _compat.py  conftest.py  test_cli.py
tests/annotation/: test_annotated_pdf.py
tests/audio/: test_synth.py
tests/eval/: test_evaluator.py
tests/harmony/: test_cadence.py  test_chord_extraction.py  test_key_detection.py  test_roman.py
tests/omr/: test_ingest.py  test_pdf_to_musicxml.py
tests/playalong/: test_build.py
tests/verification/: test_vlm_autocorrect.py  test_vlm_verifier.py
(+39 files in other folders)
