[project]
name = "agentic-sheet-music"
version = "0.1.0"
description = "Sheet music -> harmony analysis + educational slides + audio playback."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.73.1",
    "music21>=9.1",
    "pymupdf>=1.27.2.3",
]

[project.optional-dependencies]
omr = [
    # Heavy ML deps for optical music recognition; optional so the core
    # harmony/slides/player pipeline can run without them.
    # "oemer",  # add once verified on target Python version
]
audio = [
    # pyFluidSynth requires a system fluidsynth install.
    # "pyFluidSynth>=1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
analyze = "agentic_sheet_music.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_sheet_music"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "omr_binary: test requires oemer/audiveris system binary. Skip with `-m 'not omr_binary'` for a fast unit run; self-skips if the binary is missing.",
    "audio_binary: test requires fluidsynth system binary. Same conventions as omr_binary.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
